--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -571,7 +571,16 @@ margin: 0;
     padding: 15px;
 }
   
-  
-  
-  
-  
+.nextgen {
+  float: left;
+  width: 50%;
+  padding: 5px;
+}
+.nextgen img{
+    width: 90%;
+    height:90%;
+}
+.nextgen p {
+  font-size: 20px;
+  padding-left: 5px;
+}
