--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -371,21 +371,27 @@
   .about-section p {
     margin-bottom: 5rem;
   }
-.about-list{
-  flex-direction: column;
-  flex-wrap: wrap;
-  display: flex;
-  height: 100vh;
-padding: 0;
-margin: 0;
+  .about-vid{
+    display: flex;
+    justify-content: center;
   }
-
-  .about-list li{
+.country-list-container {
   display: flex;
-  gap: 10px;
-  gap: 20px 20px; /* row-gap column gap */
-  row-gap: 10px;
-  column-gap: 20px;
+  justify-content: space-between;
+}
+.about-list{
+  list-style-type: none;
+  padding: 0;
+  }
+ .country-column {
+  flex: 1;
+  max-width: 33.33333%; 
+  margin-right: 10px;
+}
+  .about-list {
+    flex: 1;
+    width: 100%; 
+    margin-right: 10px;
   }
   .projects-section {
     padding: 5rem 0;
