--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -311,10 +311,11 @@
   /*.agenda-box {
       height: 475px;*/
   .agenda-box {
-        height: 250px;
+        height: 350px;
         text-align: left !important;
-        overflow: scroll;
-      overflow-x: hidden;
+        margin-top: 30px;
+       /* overflow: scroll;
+      overflow-x: hidden;*/
     
   }  
   
