adding separation line for the text sponsorsand updating the agenda

--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -314,7 +314,7 @@
         height: 350px;
         text-align: left !important;
         margin-top: 30px;
-       overflow: scroll;
+       overflow: none;
       overflow-x: hidden;
     
   }  
