--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -314,7 +314,7 @@
         height: 350px;
         text-align: left !important;
         margin-top: 30px;
-        margin-bottom: 200px;
+        margin-bottom: 30px;
        /*overflow: none;*/
      /*overflow-y: hidden;*/
     
@@ -333,9 +333,14 @@
       
       .contrib-nav .nav-link {
       width: 250px;    
-      }    
+      }  
+
   }
-  
+   @media (min-width: 768px) {
+     .agenda-box{
+      height: 100%;
+     }
+   }
   .btn {
     box-shadow: 0 0.1875rem 0.1875rem 0 rgba(0, 0, 0, 0.1) !important;
     padding: 1.25rem 2rem;
